Poubelle qui supprime toute les taches

--- a/ToDoListV2/todolistv2.css
+++ b/ToDoListV2/todolistv2.css
@@ -117,3 +117,9 @@ ul li span:hover{
     background: #7e8ca6;
 }
 
+
+.supprimetout {
+    width: 50px;
+    margin-top: 40px;
+   margin-left: 200px;
+}
